# chaos-game-representation

./: .gitignore  Cargo.toml  README.md
src/: fasta.rs  lib.rs  main.rs  utils.rs
tests/: cgr.rs
tests/data/: anonymous_multi_fasta.fa  anonymous_single_fasta.fa  multi.h5  multi_fasta_extra_linefeeds.fa  single.h5  single_fasta.fa
www_tests/: index.html  index.js
